# t81-foundation

./: .clang-tidy  .cursorrules  .gitignore  .mdformat.toml  AGENTS.md  ANALYSIS.md  ANALYSIS.md.archived  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cover_Letter.md  DESIGN.md  Doxyfile  LICENSE  LICENSE-GPT  LICENSE-MIT  Makefile  README.es.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  ROADMAP.md  STATE_OF_T81_DEC_2025.md  T81_Foundation_Paper.tex  T81_State_of_Project_Dec_2025.md  TASKS.md  WHITEPAPER.md  _config.yaml  axion-guard.tisc  guard_match.tisc  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  rfc.md  spec_clarification.md
.github/instructions/: spec.instructions.md
.github/workflows/: bench.yml  ci.yml  codeql.yml  pdf.yaml  release.yml  search-index.yml  sidebar.yml  static.yml  toc.yml
benchmarks/: BM_LimbMul.cpp  CMakeLists.txt  benchmark.md
benchmarks/runner/: addition.cpp  arith_throughput.cpp  benchmark_runner.cpp  limb_arith_throughput.cpp  memory_bandwidth.cpp  negation_speed.cpp  overflow_detection.cpp  packing_density.cpp  roundtrip_accuracy.cpp  t81lang_compile.cpp
build-make/: CMakeCache.txt  CTestTestfile.cmake  Makefile  axion_demo  cmake_install.cmake  debug_base81  debug_codec  debug_parse  t81_axion_stub_test  t81_bigint_test  t81_c_api_bigint_test  t81_canonfs_driver_test  t81_canonfs_io_test  t81_codec_base243_test  t81_codec_base81_test  t81_demo  t81_entropy_test  t81_fraction_test  t81_hanoi_integration_test  t81_hash_stub_test  t81_ir_encoding_test  t81_ir_roundtrip  t81_lang_parser_vm_test  t81_lang_typecheck_test  t81_lang_vm_test  t81_tensor_broadcast_test  t81_tensor_elementwise_test  t81_tensor_loader_test  t81_tensor_matmul_test  t81_tensor_ops  t81_tensor_reduce_test  t81_tensor_reshape_test  t81_tensor_shape_test  t81_tensor_slice_test  t81_tensor_transpose_test  t81_tensor_unary_test  t81_ternary_arith_test  t81_vm_bounds_test  t81_vm_divmod_test  t81_vm_illegal_test  (+3 more)
docs/: Gemfile  T81_Foundation_Paper.tex  _config.yml  ai-quickstart.md  benchmarks.md  ci.md  cpp-migration-roadmap.md  cpp-quickstart.md  developer-guide.md  developer-guide.md.archived  handover.md  handover.md.archived  hardware-roadmap.md  index.md  notes.md  onboarding.md  release.md  system-status.md  tensor-guide.md
docs/_includes/: sidebar.html  topnav.html  topnyv.html
docs/_layouts/: default.html  page.html  spec.html
docs/guides/: adding-a-language-feature.md  axion-policy-manual.md  axion-trace.md  axion-tracing-manual.md  cli-toolkit.md  cli-user-manual.md  data-types-overview.md  demo-gallery.md  match-example.md  public-api-overview.md  record-enum.md  release-audit-manual.md  runtime-observability-manual.md  vector-literals.md  vm-opcodes.md  weights-integration.md
docs/search/: build_index.js  search.css  search.js  search_index.json
examples/: README.md  T81Genesis.cpp  axion_demo.cpp  axion_guard_trace.cpp  axion_policy_runner.cpp  axion_policy_trace.cpp  demo.cpp  hello_world.t81  ir_roundtrip.cpp  t81_llama_bridge.hpp  tensor_ops.cpp
include/t81/: README.md  bigint.hpp  canonfs.hpp  canonfs_io.hpp  canonical.hpp  config.hpp  conversion.hpp  entropy.hpp  enum_meta.hpp  fraction.hpp  native.hpp  packing.hpp  t81.h  t81.hpp  tensor.hpp  ternary.hpp  (+3 more)
legacy/hanoivm/: BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  Makefile  README.md  ci.yml  config.cweb  package.cwebpkg
legacy/hanoivm/docs/: CHANGELOG.md  MANIFESTO.md  README.cweb  ROADMAP.md  STATUS.md  t243_t729.md
legacy/hanoivm/scripts/: build-all.cweb  install.cwebpkg.sh  tangle-all.sh
legacy/hanoivm/src/: README.md
legacy/hanoivm/src/axion_ai/: README.md  ai_hook.cweb  axion-ai.cweb  axion-gaia-interface.cweb  axion_api.cweb  axion_gpu_request.cweb  meta.cweb  telemetry-cli.cweb  telemetry.json
legacy/hanoivm/src/disassembler/: README.md  disasm_hvm.cweb  disassembler.cweb  ghidra_hvm_plugin.cweb
legacy/hanoivm/src/gpu/: README.md  cuda_handle_request.cweb  gaia_handle_request.cweb  hvm_pcie_driver.cweb
legacy/hanoivm/src/hanoivm_core/: README.md  advanced_ops.cweb  advanced_ops_ext.cweb  hanoivm-core.cweb  hanoivm-runtime.cweb  hanoivm_cli.cweb  hanoivm_fsm.v  hanoivm_vm.cweb  hvm_firmware_entry.cweb  hvm_interpreter.cweb  hvm_loader.cweb  hvm_promotion.cweb  hvmcli.cweb  main_driver.cweb  recursive_tier_execution.cweb  simple_add.cweb  t81_patterns.cweb  t81_stack.cweb  t81recursion.cweb  t81recursion.h  ternary_arithmetic_optimization.cweb  ternary_base.h  write_simple_add.cweb
legacy/hanoivm/src/lib/: README.md  hvm-trit-util.cweb  libt243.cweb  libt729.cweb  libt81.cweb  nist_encryption.cweb  t243_to_t729.cweb  t243bigint.cweb  t729tensor.cweb  t729tensor_loader.cweb  t729tensor_reshape.cweb  t729tensor_slice.cweb  t729tensor_to_string.cweb  t729tensor_transpose.cweb  t81_types_support.cweb
legacy/hanoivm/src/t81lang_compiler/: README.md  T81InstrFormats.td  T81InstrInfo.td  T81RegisterInfo.td  emit_hvm.cweb  hvm_assembler.cweb  slang_grammer.ebnf  t81_codegen.cweb  t81_compile.py  t81_llvm_backend.cweb  t81_to_hvm.cweb  t81asm.cweb  t81lang_compiler.cweb  t81lang_grammar.cweb  t81lang_irgen.cweb  t81lang_lexer.cweb  t81lang_parser.cweb  t81lang_semantic.cweb  tisc_backend.cweb  tisc_compiler.cweb  tisc_ir.cweb  tisc_stdlib.cweb
legacy/hanoivm/src/visualization/: FrameSceneBuilder.cweb  logviewer.cweb  recursion_exporter.cweb
notebooks/: 00_t81_orientation.ipynb  01_balanced_ternary_playground.ipynb  02_t81vm_trace_walkthrough.ipynb
pdf/: build.sh  metadata.yaml  template.tex
policy/: guards.axion
scripts/: capture-axion-trace.sh  generate_sidebar.py  inject_toc.py  run-demos.sh  weights-benchmark.sh
spec/: CanonFS-spec.md  axion-kernel.md  canonfs-spec.md  cognitive-tiers.md  constitution.md  cpp-mapping.md  hanoi-kernel-spec.md  index.md  t81-data-types.md  t81-overview.md  t81-spec.md  t81lang-spec.md  t81vm-spec.md  tisc-spec.md  v1.0.0-canonical.md
src/: main.c  t81_core.h
tools/: ir_inspector.cpp
(+517 files in other folders)
